SASS: Add new properties to prevent scrollbars on 'AboutPage'

--- a/src/styles/pages/AboutPage.scss
+++ b/src/styles/pages/AboutPage.scss
@@ -90,13 +90,14 @@ $color1: colors.$color1;
       justify-content: center;
       align-items: center;
       width: 40%;
+      padding: 1rem;
 
       .figure {
         width: 100%;
       }
 
       .profile {
-        width: 55%;
+        width: 53%;
       }
     }
   }
